--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,11 @@ header{
     font-size: 48px;
     text-align: center;
 }
+button{
+    height: 150px;
+    width: 350px;
+    border-radius: 75px;
+    background-color: tan;
+    color: black;
+    font-size: 20px;
+}
